Adding runtime config.

--- a/ENV.env
+++ b/ENV.env
@@ -1,1 +1,1 @@
-GUNICORN_CMD_ARGS="--bind=0.0.0.0:8000 --loglevel info --capture-output --access-logfile"
+GUNICORN_CMD_ARGS="--bind=0.0.0.0:80 --log-level info --capture-output --access-logfile -"
