--- a/ENV.env
+++ b/ENV.env
@@ -1,1 +1,2 @@
 GUNICORN_CMD_ARGS="--bind=0.0.0.0:80 --log-level info --capture-output --access-logfile -"
+FLASK_SECRET_KEY="NotVerySecretAtAll..."
